--- a/aurorian-server-pack/configs/tips.cfg
+++ b/aurorian-server-pack/configs/tips.cfg
@@ -6,8 +6,9 @@ general {
 
     # A list of custom tips added by the user or modpack. [default: ]
     S:customTips <
-Each Aurorian Dungeon holds a different tier of equipment
-Up to 5 Chimneys can be placed on an Aurorian Furnace to increase its speed
+Each Aurorian Dungeon holds a different tier of equipment.
+Umbra Equipment can be found in special cabins scattered throughout the Aurorian.
+Up to 5 Chimneys can be placed on an Aurorian Furnace to increase its speed.
      >
 
     # The color of the actual tip text. [default: FFFFFF]
@@ -22,5 +23,3 @@ Up to 5 Chimneys can be placed on an Aurorian Furnace to increase its speed
     # The amount of offset the tip text should have from the bottom of the screen. [range: 0 ~ 2147483647, default: 40]
     I:yOffset=40
 }
-
-
