Tweaked some server stuff

--- a/aurorian-server-pack/configs/tips.cfg
+++ b/aurorian-server-pack/configs/tips.cfg
@@ -9,6 +9,7 @@ general {
 Each Aurorian Dungeon holds a different tier of equipment.
 Umbra Equipment can be found in special cabins scattered throughout the Aurorian.
 Up to 5 Chimneys can be placed on an Aurorian Furnace to increase its speed.
+You can right-click to harvest crops.
      >
 
     # The color of the actual tip text. [default: FFFFFF]
